[gd_scene load_steps=7 format=3 uid="uid://cjw534simi2n4"]

[ext_resource type="Script" uid="uid://4vv432bysvbx" path="res://Scenes/12seconds/seasaw/sea_saw.gd" id="1_irlsu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wja4p"]
size = Vector2(100, 25)

[sub_resource type="BoxMesh" id="BoxMesh_pwlhk"]
size = Vector3(100, 25, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxe1p"]
size = Vector2(38, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tijp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vd8i"]
size = Vector2(38, 20)

[node name="SeaSaw" type="Node2D"]
script = ExtResource("1_irlsu")

[node name="board" type="StaticBody2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="board"]
shape = SubResource("RectangleShape2D_wja4p")

[node name="MeshInstance2D" type="MeshInstance2D" parent="board/CollisionShape2D"]
mesh = SubResource("BoxMesh_pwlhk")

[node name="LeftArea" type="Area2D" parent="."]

[node name="CollisionStart" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-28, -23)
shape = SubResource("RectangleShape2D_xxe1p")

[node name="MiddleArea" type="Area2D" parent="."]

[node name="CollisionCenter" type="CollisionShape2D" parent="MiddleArea"]
position = Vector2(2, -23)
shape = SubResource("RectangleShape2D_2tijp")

[node name="RightArea" type="Area2D" parent="."]

[node name="CollisionEnd" type="CollisionShape2D" parent="RightArea"]
position = Vector2(32, -23)
shape = SubResource("RectangleShape2D_2vd8i")

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="LeftArea" to="." method="_on_left_area_body_entered"]
[connection signal="body_entered" from="MiddleArea" to="." method="_on_middle_area_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_right_area_body_entered"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_rotation_timer_timeout"]
